# little-squid-cli

./: .gitignore  Cargo.toml
data/: my_dataframe_11.parquet  my_dataframe_24.parquet  my_dataframe_5.parquet
src/: lib.rs  main.rs  notes.md  save.rs  todo.txt
src/cli/: config.rs  opts.rs
src/datasets/: block_fetcher.rs  blocks.rs  blocks2.rs  fetcher.rs  mod.rs  traits.rs  transaction_fetcher.rs  transactions.rs
src/export/: export.rs  fields.rs  mod.rs  transaction_fields.rs
src/fetcher/: fetcher.rs  mod.rs
src/progress/: mod.rs  stats.rs
src/utils/src/: archive.rs  utils.rs
